[project]
name = "travel_planner"
version = "0.1.0"
description = "Multi-Modal Travel Assistant with LangGraph and Streamlit"
readme = "README.md"
requires-python = ">=3.12"
package_mode = false
dependencies = [
    "langchain>=0.1.0",
    "langchain-groq>=0.1.0",
    "langgraph>=0.0.40",
    "streamlit>=1.30.0",
    "chromadb>=0.4.0",
    "pydantic>=2.0.0",
    "plotly>=5.18.0",
    "requests>=2.31.0",
    "python-dotenv>=1.0.0",
    "google-search-results>=2.4.2",
]
